Organizacion de carpetas

--- a/Notebooks/NoteBookOncoPredict.ipynb
+++ b/Notebooks/NoteBookOncoPredict.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "3fa7de88",
    "metadata": {},
    "outputs": [
@@ -181,7 +181,7 @@
    "source": [
     "#cargamos el dataset que esta en formato .parquet\n",
     "\n",
-    "df = pd.read_parquet('df_train.parquet')\n",
+    "df = pd.read_parquet('Data/df_train.parquet')\n",
     "#mostramos las primeras filas del dataset\n",
     "print(df.head())\n",
     "#mostramos las columnas del dataset\n",
@@ -191,6 +191,14 @@
     "#mostramos los tipos de datos del dataset\n",
     "print(df.dtypes)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f3a94a2b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
