--- a/Notebooks/NoteBookOncoPredict.ipynb
+++ b/Notebooks/NoteBookOncoPredict.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "3fa7de88",
    "metadata": {},
    "outputs": [
@@ -181,7 +181,7 @@
    "source": [
     "#cargamos el dataset que esta en formato .parquet\n",
     "\n",
-    "df = pd.read_parquet('Data/df_train.parquet')\n",
+    "df = pd.read_parquet('../Data/df_train.parquet')\n",
     "#mostramos las primeras filas del dataset\n",
     "print(df.head())\n",
     "#mostramos las columnas del dataset\n",
@@ -194,11 +194,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "f3a94a2b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GENERO                           0\n",
+      "ESTADO_CIVIL                     0\n",
+      "FECHA_NACIMIENTO                 0\n",
+      "CODIGO_SEDE                      0\n",
+      "MULTI_CANCER                  3618\n",
+      "CESION                           0\n",
+      "RIESGOS                          0\n",
+      "CANCER_MAMA_FAMILIAR             0\n",
+      "CANCER_OTRO_SITIO                0\n",
+      "CANCER_OTRO_SITIO_FAMILIAR       0\n",
+      "CEREBRAL_FAMILIAR                0\n",
+      "FECHA_DATOS_PESO_TALLA           0\n",
+      "PESO                           133\n",
+      "TALLA                          133\n",
+      "FECHA_CONSULTA_TENSION           0\n",
+      "TSISTOLICA                     140\n",
+      "TDIASTOLICA                    140\n",
+      "Fecha_cero                       0\n",
+      "Target                           0\n",
+      "mes_6                            0\n",
+      "mes_5                            0\n",
+      "mes_4                            0\n",
+      "mes_3                            0\n",
+      "mes_2                            0\n",
+      "mes_1                            0\n",
+      "valor_servicio                   0\n",
+      "IV_NIVEL                         0\n",
+      "HOSPI_NO_QUIRURGICA              0\n",
+      "URGENCIAS                        0\n",
+      "HOSPITALIZACION                  0\n",
+      "CITA_ONCOLOGICA                  0\n",
+      "Biopsias_cancer                  0\n",
+      "radioterapias_cancer             0\n",
+      "quimioterapias__cancer           0\n",
+      "hormonoterapias__cancer          0\n",
+      "cuidado_palitiavo__cancer        0\n",
+      "inmunoterapias_cancer            0\n",
+      "Citas_oncologicas_cancer         0\n",
+      "psiquiatria_cancer               0\n",
+      "psicologia_cancer                0\n",
+      "nutricion_cancer                 0\n",
+      "atencion_nutricion               0\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Revisamos si hay valores nulos en el dataset\n",
+    "print(df.isnull().sum())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "ca1c8ec1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[None '1' '2']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#revisamos los valores unicos de la columna MULTI_CANCER\n",
+    "print(df['MULTI_CANCER'].unique())               "
+   ]
   }
  ],
  "metadata": {
